--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-plugin-solid": "^0.12.1",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.3",
     "vite": "^4.2.1",
@@ -18,6 +22,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "clsx": "^1.2.1",
     "postcss": "^8.4.23",
     "solid-js": "^1.7.1"
   }
